# oneLineWriter

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
.claude/: settings.json  settings.local.json
apps/: CMakeLists.txt  FontManager.cpp  FontManager.hpp  main.cpp
apps/desktop/: CMakeLists.txt
apps/desktop/shaders/: viewport3d.frag  viewport3d.vert
apps/desktop/src/: DesktopWorkbench.cpp  DesktopWorkbench.hpp  Viewport3DWindow.cpp  Viewport3DWindow.hpp  Viewport3DWindowVulkan.cpp  Viewport3DWindowVulkan.hpp  main.cpp
docs/: architecture.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/owl/core/: Application.hpp
src/core/src/: Application.cpp
src/device/: CMakeLists.txt
src/device/include/owl/device/: GrblController.hpp
src/device/src/: GrblController.cpp
src/gcode/: CMakeLists.txt
src/gcode/include/owl/gcode/: GCodeGenerator.hpp  GCodeIo.hpp  TextStrokePlanner.hpp
src/gcode/src/: GCodeGenerator.cpp  GCodeIo.cpp  TextStrokePlanner.cpp
src/render/: CMakeLists.txt
src/render/include/owl/render/: IRenderBackend.hpp  RenderBackendFactory.hpp  RenderService.hpp  RenderTypes.hpp
src/render/src/: OpenGLRenderBackend.cpp  RenderBackendFactory.cpp  RenderService.cpp  RenderStatsUtils.hpp  VulkanRenderBackend.cpp
